# zero-shot-sdd-harness

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  NORTH-STAR.md  README.md  agent.py  alembic.ini  dev.py  pyproject.toml  render.yaml  reset.sh
.claude/: settings.json
.claude/agents/: agent-builder.md  analyser.md  auditor.md  backend-code-generator.md  code-generator.md  code-reviewer.md  deployer.md  drift-auditor.md  executor.md  frontend-code-generator.md  implementer.md  plan-reviewer.md  planner.md  qa-auditor.md  researcher.md  reviewer.md  spec-author.md  spec-projector.md  spec-reviewer.md  spec-writer.md  supervisor.md  tech-architect.md  tech-designer.md  verifier.md
.claude/commands/: build.md  change.md  deploy.md  gates.md  maintain.md  new.md  plan.md  spec-check.md  spec-new-capability.md  sync.md  zero-shot-build.md  zero-shot-fix.md  zero-shot-sync.md
.claude/hooks/: push-after-commit.sh  sync-nudge.sh
.claude/rules/: harness.md
.githooks/: pre-commit
.github/workflows/: ci.yml  deploy.yml
agent/: gate_eval.py  graph.py  guardrails.py  memory.py  multi_agent.py  runner.py  server.py  sessions.py  state.py  tools.py
alembic/: env.py
alembic/versions/: 0002_analysis_session.py  0002_analyst_tables.py  0002_csv_analyst.py  0002_data_analysis.py  0002_data_analyst_tables.py  0002_datasets_and_analyses.py  0002_datasets_runs.py  0002_datasets_sessions_messages_audit.py  001_initial.py  2d4bd72d0cbd_add_dashboards.py  3b86e87fef32_initial.py  (+10 more)
docs/: sdd-deck.html  sdd-deck.pptx
examples/: sales.csv
frontend/: .gitignore  eslint.config.js  next.config.js  next.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.js
harness/: README.md  ai-agents.md  engineering-practices.md  generate.py  harness.md  layout.md  phases.md  philosophy.md  project-layout.md  spec-driven.md
reports/: implementation-plan.md
scripts/: demo_gate.sh
spec/: 02-architecture.md  04-data-model.md  05-api.md  07-agent-graph.md  README.md  agent-graph.md  agent.md  api.md  architecture.md  code-style.md  constitution.md  data-model.md  data.md  product.md  roadmap.md  tech-stack.md  ui.md  vision.md
src/: __init__.py  __main__.py  config.py  db.py  domain.py  duck.py  evals.py  gate_eval.py  graph.py  guardrails.py  llm.py  observability.py  runner.py  seed.py  server.py  state.py  tools.py
tests/: conftest.py  test_analyst_workflow_gate.py  test_api_flow.py  test_audit_fr.py  test_capabilities.py  test_dashboard_gate.py  test_data_analyst_gate.py  test_demo_gate.py  test_extensions.py  test_guardrails.py  test_health.py  test_ingest.py  test_loop.py  test_multi_agent.py  test_multi_dataset_gate.py  test_persistence_fr.py  test_phase1.py  test_phase1_api.py  test_phase1_cost_guard.py  test_phase1_engine.py  test_phase1_graph.py  test_phase1_privacy.py  test_phase1_smoke.py  test_query_fr.py  test_sessions.py  test_streaming.py
(+710 files in other folders)
