[project]
name = "data-analysis-agent"
version = "0.1.0"
description = "CSV upload + natural language Q&A via Gemini"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic-settings>=2.2",
    "langgraph>=0.2",
    "pandas>=2.2",
    "structlog>=24",
    "openai>=2.41.1",
    "psycopg2-binary>=2.9.12",
    "pyarrow>=24.0.0",
    "mcp==1.28.0",
    "duckdb>=1.1,<2",
    "langgraph-checkpoint-sqlite>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-anyio>=0.0.0",
    "httpx>=0.27",
]
postgres = [
    "psycopg2-binary>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_analysis_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "external_db: live external-database tests (skipped unless DATAANALYSIS_TEST_PG_URI is set)",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.0",
]
