[project]
name = "agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "anthropic>=0.28",
    "structlog>=24.1",
    "langgraph>=0.1",
    "google-genai>=2.9.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=16",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "plotly>=5.22",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "statsmodels>=0.14",
    "markdown-it-py>=3.0",
    "tabulate>=0.9",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
